--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -5,6 +5,8 @@
     background-color: #1e1e2f;
     padding: 1rem 2rem;
     flex-wrap: wrap;
+    width: 100%;
+    box-sizing: border-box;
 }
 
 .navbar-logo {
@@ -119,7 +121,7 @@
         position: absolute;
         top: 100%;
         left: 0;
-        width: 100vw;
+        width: 100%;
         background: #1e1e2f;
         box-shadow: 0 8px 32px #0008;
         z-index: 1001;
@@ -129,6 +131,7 @@
         border-bottom-left-radius: 18px;
         border-bottom-right-radius: 18px;
         animation: fadeInMenu 0.2s;
+        box-sizing: border-box;
     }
     .navbar-menu.open {
         display: flex;
@@ -144,6 +147,26 @@
         margin-top: 0.5rem;
         width: 100%;
         justify-content: flex-start;
+    }
+}
+
+/* Small mobile devices (iPhone SE, etc.) */
+@media (max-width: 375px) {
+    .navbar {
+        padding: 0.75rem 0.75rem 0.5rem 0.75rem;
+    }
+    
+    .navbar-hamburger {
+        right: 1rem;
+        top: 1rem;
+    }
+    
+    .navbar-menu {
+        padding: 1rem 1rem 0.75rem 1rem;
+    }
+    
+    .logo-text {
+        font-size: 1.1rem;
     }
 }
 
