--- a/src/globals.css
+++ b/src/globals.css
@@ -39,7 +39,7 @@ body {
     margin-bottom: 20px;
     padding: 10px;
     box-sizing: border-box;
-    box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     border-radius: 8px;
     overflow: hidden;
 }
